--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       }
     </style>
     <script defer src="script.js"></script>
+    <script defer src="script211.js"></script>
+    <script defer src="script212.js"></script>
   </head>
   <body>
     <h1>Object Oriented Programming (OOP) With JavaScript</h1>
