--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     <script defer src="script.js"></script>
     <script defer src="script211.js"></script>
     <script defer src="script212.js"></script>
+    <script defer src="script213.js"></script>
+    <script defer src="script214.js"></script>
+    <script defer src="script215.js"></script>
+    <script defer src="script216.js"></script>
+    <script defer src="script217.js"></script>
+    <script defer src="script218.js"></script>
+    <script defer src="script219222.js"></script>
+    <script defer src="script224.js"></script>
   </head>
   <body>
     <h1>Object Oriented Programming (OOP) With JavaScript</h1>
